Parameter cleanup in IC model
